--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "boto3>=1.36.14",
     "langchain>=0.3.17",
+    "langchain-community>=0.3.23",
     "langchain-openai>=0.3.3",
     "levenshtein>=0.26.1",
     "numpy-financial>=1.0.0",
