--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "openai>=1.61.1",
     "openpyxl>=3.1.5",
     "python-dotenv>=1.0.1",
+    "scipy>=1.15.3",
     "seaborn>=0.13.2",
     "streamlit>=1.42.0",
 ]
