--- a/requirements.txt
+++ b/requirements.txt
@@ -1,120 +1,97 @@
-apparmor==4.0.1
-appdirs==1.4.4
-argcomplete==3.1.4
-attrs==23.2.0
-Babel==2.10.3
-bcc==0.29.1
-bcrypt==3.2.2
-beautifulsoup4==4.12.3
-blinker==1.7.0
-Brlapi==0.8.5
-Brotli==1.1.0
-certifi==2023.11.17
-chardet==5.2.0
-cliapp==1.20180812.1
-click==8.1.6
-cloud-init==24.4.1
-cmdtest==0.32+git
-colorama==0.4.6
-command-not-found==0.3
-configobj==5.0.8
-contourpy==1.0.7
-cryptography==41.0.7
-cssselect==1.2.0
-cupshelpers==1.0
-cycler==0.11.0
-dbus-python==1.3.2
-decorator==5.1.1
-defer==1.0.6
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+altair==5.5.0
+annotated-types==0.7.0
+anyio==4.9.0
+attrs==25.3.0
+blinker==1.9.0
+boto3==1.38.13
+botocore==1.38.13
+cachetools==5.5.2
+certifi==2025.4.26
+charset-normalizer==3.4.2
+click==8.2.0
+contourpy==1.3.2
+cycler==0.12.1
+dataclasses-json==0.6.7
 distro==1.9.0
-distro-info==1.7+build1
-docker==5.0.3
-docker-compose==1.29.2
-dockerpty==0.4.1
-docopt==0.6.2
-duplicity==2.1.4
-fasteners==0.18
-fonttools==4.46.0
-fs==2.4.16
-gyp==0.1
-html5lib==1.1
-httplib2==0.20.4
-idna==3.6
-Jinja2==3.1.2
-jsonpatch==1.32
-jsonpointer==2.0
-jsonschema==4.10.3
-kiwisolver==0.0.0
-language-selector==0.1
-launchpadlib==1.11.0
-lazr.restfulclient==0.14.6
-lazr.uri==1.0.6
-LibAppArmor==4.0.1
-louis==3.29.0
-lxml==5.2.1
-lz4==4.0.2+dfsg
-Mako==1.3.2.dev0
-Markdown==3.5.2
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-matplotlib==3.6.3
-mdurl==0.1.2
-monotonic==1.6
-mpmath==0.0.0
-netaddr==0.8.0
-numpy==1.26.4
-oauthlib==3.2.2
-olefile==0.46
-packaging==24.0
-paramiko==2.12.0
-pexpect==4.9.0
-pillow==10.2.0
-pipx==1.4.3
-platformdirs==4.2.0
-psutil==5.9.8
-ptyprocess==0.7.0
-pycairo==1.25.1
-pycups==2.0.1
-Pygments==2.17.2
-PyGObject==3.48.2
-PyJWT==2.7.0
-PyNaCl==1.5.0
-pyparsing==3.1.1
-pyrsistent==0.20.0
-pyserial==3.5
-python-apt==2.7.7+ubuntu4
-python-dateutil==2.8.2
-python-debian==0.1.49+ubuntu2
-python-dotenv==1.0.1
-python-magic==0.4.27
-pytz==2024.1
-pyxdg==0.28
-PyYAML==6.0.1
-requests==2.31.0
-rich==13.7.1
-SciPy==1.11.4
-screen-resolution-extra==0.0.0
-setuptools==68.1.2
-six==1.16.0
-soupsieve==2.5
-sympy==1.12
-systemd-python==235
-texttable==1.6.7
-ttystatus==0.38
-typing_extensions==4.10.0
-ubuntu-drivers-common==0.0.0
-ubuntu-pro-client==8001
-ufoLib2==0.16.0
-ufw==0.36.2
-unattended-upgrades==0.1
-unicodedata2==15.1.0
-urllib3==2.0.7
-usb-creator==0.3.16
-userpath==1.9.1
-wadllib==1.3.6
-webencodings==0.5.1
-websocket-client==1.7.0
-wheel==0.42.0
-xdg==5
-xkit==0.0.0
-zombie-imp==0.0.2
+et-xmlfile==2.0.0
+fonttools==4.58.0
+frozenlist==1.6.0
+gitdb==4.0.12
+gitpython==3.1.44
+greenlet==3.2.2
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+httpx-sse==0.4.0
+idna==3.10
+jinja2==3.1.6
+jiter==0.9.0
+jmespath==1.0.1
+jsonpatch==1.33
+jsonpointer==3.0.0
+jsonschema==4.23.0
+jsonschema-specifications==2025.4.1
+kiwisolver==1.4.8
+langchain==0.3.25
+langchain-community==0.3.24
+langchain-core==0.3.59
+langchain-openai==0.3.16
+langchain-text-splitters==0.3.8
+langsmith==0.3.42
+levenshtein==0.27.1
+markupsafe==3.0.2
+marshmallow==3.26.1
+matplotlib==3.10.3
+multidict==6.4.3
+mypy-extensions==1.1.0
+narwhals==1.39.0
+numpy==2.2.5
+numpy-financial==1.0.0
+openai==1.78.1
+openpyxl==3.1.5
+orjson==3.10.18
+packaging==24.2
+pandas==2.2.3
+pillow==11.2.1
+propcache==0.3.1
+protobuf==6.30.2
+pyarrow==20.0.0
+pydantic==2.11.4
+pydantic-core==2.33.2
+pydantic-settings==2.9.1
+pydeck==0.9.1
+pyparsing==3.2.3
+python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
+pytz==2025.2
+pyyaml==6.0.2
+rapidfuzz==3.13.0
+referencing==0.36.2
+regex==2024.11.6
+requests==2.32.3
+requests-toolbelt==1.0.0
+rpds-py==0.24.0
+s3transfer==0.12.0
+scipy==1.15.3
+seaborn==0.13.2
+six==1.17.0
+smmap==5.0.2
+sniffio==1.3.1
+sqlalchemy==2.0.40
+streamlit==1.45.0
+tenacity==9.1.2
+tiktoken==0.9.0
+toml==0.10.2
+tornado==6.4.2
+tqdm==4.67.1
+typing-extensions==4.13.2
+typing-inspect==0.9.0
+typing-inspection==0.4.0
+tzdata==2025.2
+urllib3==2.4.0
+watchdog==6.0.0
+yarl==1.20.0
+zstandard==0.23.0
