--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ click==8.2.0
 contourpy==1.3.2
 cycler==0.12.1
 dataclasses-json==0.6.7
+debugpy==1.8.15
 distro==1.9.0
 et-xmlfile==2.0.0
 fonttools==4.58.0
