--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "numpy-financial>=1.0.0",
     "openai>=1.61.1",
     "openpyxl>=3.1.5",
+    "plotly>=6.2.0",
     "python-dotenv>=1.0.1",
     "scipy>=1.15.3",
     "seaborn>=0.13.2",
