--- a/requirements.txt
+++ b/requirements.txt
@@ -57,6 +57,7 @@ orjson==3.10.18
 packaging==24.2
 pandas==2.2.3
 pillow==11.2.1
+plotly==6.2.0
 propcache==0.3.1
 protobuf==6.30.2
 pyarrow==20.0.0
